Bug 1109574 - Check for null body before setting bodyUsed in Request constructor. r=bkelly